--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "express": "^4.18.2",
     "mongoose": "^7.2.2",
     "reflect-metadata": "^0.1.13",
