--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-socket.io": "^9.4.3",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/websockets": "^9.4.3",
+    "@types/lodash": "^4.14.195",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
